# AgenticAI

./: .gitignore  README.md  main.py  package.txt  pyproject.toml  requirements.txt
AgenticAI/03_DataTypes/: Datatypes.ipynb
Section02-EnvSetup/: howToManagePackages.ipynb  stepsToEnvSetupUsingConda.ipynb  stepsToEnvSetupUsingUV.ipynb
Section04/: intro.ipynb  pydantic-Intro.ipynb  pydantic.ipynb
Section05-RAG/01_Basics_Of_Langchain/1.1-openai/: 1.1.1-GettingStarted.ipynb  1.1.2-Simpleapp.ipynb
Section05-RAG/01_Basics_Of_Langchain/1.2-ollama/: app.py
Section05-RAG/01_Basics_Of_Langchain/3.2-DataIngestion/: 3.2-DataIngestion.ipynb
Section05-RAG/01_Basics_Of_Langchain/4-Embeddings/: 4.1-embedding.ipynb  (+2 more)
Section06-openai-ollama/: 1.1.1-GettingStarted.ipynb  1.1.2-Simpleapp.ipynb
Section06-openai-ollama/1.2-ollama/: 1.2.1-Simpleapp.ipynb  app.py  gptAppUsingOllama.py
Section06-openai/1.1-openai/: 1.1.1-GettingStarted.ipynb
Section06-openai/1.2-ollama/: app.py
Section07-LLMAppUsingLCEL/: README.md
Section07-LLMAppUsingLCEL/LCEL/: client.py  serve.py  simplellmLCEL.ipynb
Section08-ConversationHistory-Chatbots/: 1-chatbots.ipynb
Section10-Langgraph/: 1-simplegraph.ipynb  2-chatbot.ipynb
Section10-langchainupdated/: pyproject.toml
Section10-langchainupdated/updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-tools.ipynb  4-messages.ipynb
Section11-LanggraphComponents/: 03-DataclassStateSchema.ipynb  04-pydantic.ipynb  05-ChainsLangGraph.ipynb  07-ReActAgents.ipynb  08-streaming.ipynb  3-DataclassStateSchema.ipynb
Section12-LangsmithMonitoring/: openai_agent.py
Section12-LangsmithMonitoring/.langgraph_api/: .langgraph_ops.pckl
Section13-Workflows/: 1-prompting_chaining.ipynb  2-parallelization.ipynb  3-Routing.ipynb  4-orchestrator-worker.ipynb  5-Evaluator-optimizer.ipynb
Section14-HumanInLoop/: 01-Humanintheloop.ipynb
Section15-RAGWithLanggraph/: 1502-AgenticRAG.ipynb  1503-CorrectiveRAG.ipynb  1504-AdaptiveRAG.ipynb
Section18-GuardRails/: langchain_guardrails_crash_course.ipynb
Section19-Deepagents/: testDeepAgent.ipynb
campusx/: 0_test_installation.ipynb  10_persistence.ipynb  1_bmi_workflow.ipynb  2_simple_llm_workflow.ipynb  3_prompt_chaining.ipynb  5_UPSC_essay_workflow.ipynb  6_quadratic_equation_workflow.ipynb  7_review_reply_workflow.ipynb  8_X_post_generator.ipynb  9_basic_chatbot.ipynb
campusx/chatbot01/: langgraph_backend.py
campusx/chatbot02_streaming/: streamlit_frontend_streaming.py
(+13 files in other folders)
