[project]
name = "agentnotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.3.1",
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.122.0",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langgraph[dev]>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "langserve>=0.3.3",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "sse-starlette>=2.1.3",
    "streamlit>=1.51.0",
    "wikipedia>=1.4.0",
    "langchain-docling>=2.0.0",
]
